package dev.vubl.bookstore.entities;

public enum CartStatus {
  ACTIVE,
  CANCELLED,
  CHECKED_OUT
}
