package dev.vubl.bookstore.entities;

public enum DiscountType {
  PERCENT,
  FIXED
}
