package dev.vubl.bookstore.entities;

public enum OrderStatus {
  PENDING,
  PAID,
  SHIPPED,
  CANCELLED
}
