package dev.vubl.bookstore.entities;

public enum PaymentMethod {
  VNPAY,
  COD
}
