package dev.vubl.bookstore.entities;

public enum UserType {
  ADMIN,
  CUSTOMER,
  STAFF
}
