@startuml class_diag
hide empty members
 skinparam packageStyle rectangle
 skinparam classAttributeIconSize 0
 skinparam linetype ortho


  class BaseEntity {
    - id: Integer
    - createTimeStamp: Instant
    - updateTimeStamp: Instant
  }

  class ApplicationUser extends BaseEntity {
    - userType: UserType
    - email: String
    - name: String
    - password: String
    - phoneNumber: String
    - googleId: String
    - facebookId: String
    - addressList: List<CustomerAddressInfo>
  }

  enum UserType {
    ADMIN
    CUSTOMER
    STAFF
  }

  class RefreshToken extends BaseEntity {
    - refreshToken: String
    - expiration: Instant
  }

  class CustomerAddressInfo extends BaseEntity {
    - city: String
    - commune: String
    - street: String
  }

  class Book extends BaseEntity {
    - isbn: String
    - title: String
    - description: String
    - author: String
    - price: BigDecimal
    - inStock: Integer
    - urlSlug: String
    - publisher: String
    - publishYear: Integer
    - pageCount: Integer
    - imageUrl: String
  }

  class Category extends BaseEntity {
    - categoryName: String
    - categorySlug: String
    - childrenCategories: Set<Category>
    - parentCategory: Category
  }

  class Collection extends BaseEntity {
    - collectionName: String
    - collectionSlug: String
  }

  class Cart extends BaseEntity {
    - cartStatus: CartStatus
    - items: List<CartItem>
  }

  class CartItem extends BaseEntity {
    - quantity: Integer
  }

  class Order extends BaseEntity {
    - email: String
    - phoneNumber: String
    - name: String
    - note: String
    - orderStatus: OrderStatus
    - paymentMethod: PaymentMethod
    - itemsTotal: BigDecimal
    - shippingFee: BigDecimal
    - orderTotal: BigDecimal
    - couponCode: String
    - orderDate: LocalDate
    - city: String
    - commune: String
    - street: String
  }

  class OrderItem extends BaseEntity {
    - quantity: Integer
    - priceAtPurchase: BigDecimal
    - titleAtPurchase: String
    - isbn: String
    - productCode: String
  }

  enum CartStatus {
    ACTIVE
    CANCELLED
    CHECKED_OUT
  }

  enum OrderStatus {
    PENDING
    PAID
    SHIPPED
    CANCELLED
  }

  enum PaymentMethod {
    VNPAY
    COD
  }

  enum DiscountType {
    PERCENT
    FIXED
  }

  class Coupon extends BaseEntity {
    - code: String
    - discountType: DiscountType
    - discountValue: BigDecimal
    - minOrderAmount: BigDecimal
    - maxUses: Integer
    - usedCount: Integer
    - validFrom: LocalDateTime
    - validUntil: LocalDateTime
    - isActive: boolean
  }

  ' Entity relationships
  ApplicationUser "1" o-- "0..*" CustomerAddressInfo : addresses
  Cart "1" .. "1" ApplicationUser : user
  RefreshToken "1" .. "1" ApplicationUser : user
  Cart "1" *-- "0..*" CartItem : items
  CartItem "0..*" .. "1" Book
  Order "1" *-- "0..*" OrderItem : items
  OrderItem "0..*" o-- "1" Book
  Book "0..*" .. "1" Category
  Book "0..*" .. "1" Collection
  Category "1" o-left- "0..*" Category : children
  Category "0..1" .. "1" Category : parent
@enduml